MutationObserver: Correct MutationRecords for Node.replaceChild().

parent.replaceChild(parent.lastChild, parent.firstChild);

This code produced just one MutationRecord, but it should produce two
MutationRecords. This CL makes replaceChild() implementation close to the DOM
standard.

New behavior matches to Firefox and Safari.

BUG=722741

Review-Url: https://codereview.chromium.org/2889523002
Cr-Commit-Position: refs/heads/master@{#472393}

Former-commit-id: 56387aa57bc11d0f969c5bb9824a39c804202be3